# DeviceStorage

./: CMakeLists.txt  Main.qml  README.md  appicon.rc  fdevice.cpp  fdevice.h  fdeviceloader.cpp  fdeviceloader.h  fdevicenetwork.cpp  fdevicenetwork.h  images.qrc  main.cpp
android/: AndroidManifest.xml  AndroidManifestTemp.xml
txt/: info.txt
